--- a/page-Svyatogorsk-and-Soledar.html
+++ b/page-Svyatogorsk-and-Soledar.html
@@ -305,10 +305,9 @@
                                             <p>
                                                 <strong>18:40 - 19:00</strong> 
                                                 Заселение в гостиницу. Номера стандарт 2-3 местные,
-                                                удобства в номере.<br>
-                                                <i>Если вас двое, селим в 2-х местный</i>
-                                                <img src="/images/Emoji/1f642.png" alt="smile" height="20px">
-                                                <br>
+                                                удобства в номере. 
+                                                <i>Если вас двое, селим в 2-х местный.</i>
+                                                <!--<img src="/images/Emoji/1f642.png" alt="smile" height="20px">-->
                                                 Все кто устал отправляются на отдых в гостиницу, 
                                                 а кто еще хочет гулять и делать потрясающие фото для
                                                 <!-- instagram -->
