--- a/page-Svyatogorsk-and-Soledar.html
+++ b/page-Svyatogorsk-and-Soledar.html
@@ -5,8 +5,8 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
-    <meta name="description" content="Туры выходного дня 'Новый поворот',  Святогорск и Соледар ">
-
+    <meta name="description" content="Туры выходного дня 'Новый поворот',  Святогорск и Соледар, Шампанское и соляные шахты - удивительный Святогорск, 
+                                      Вкуснейший завод Шампанских вин с дегустацией, Соляные шахты с поразительными скульптурами из соли">
     <!-- Open Graph data-->
     <meta property="og:title" content=" Святогорск и Соледар">
     <meta property="og:description"
