--- a/page-Svyatogorsk-and-Soledar.html
+++ b/page-Svyatogorsk-and-Soledar.html
@@ -180,7 +180,7 @@
                                 Цена билета: с <strong>19 Июня</strong> - <u>2910 грн.</u> 
                             </span>
                                         <hr>
-                            <i>Предоплата по брони 50% от стоимости, доплата за 3-4 
+                            <i>*Предоплата по брони 50% от стоимости, доплата за 3-4 
                                 дня до тура полной стоимости
                                 <img src="/images/Emoji/1f606.png" alt="smile" height="20px">
                             </i>   
