--- a/page-Svyatogorsk-and-Soledar.html
+++ b/page-Svyatogorsk-and-Soledar.html
@@ -161,6 +161,7 @@
                         <!--//ПОДРОБНЕЕ-->
                         <!--//Вступление-->
                         <hr>
+                        
                         <!-- Информируем -->
                         <div class="alert alert-info mt-3 ">
                             <button type="button" class="close" data-dismiss="alert">&times;</button>
@@ -180,10 +181,13 @@
                                 Цена билета: с <strong>19 Июня</strong> - <u>2910 грн.</u> 
                             </span>
                                         <hr>
-                            <i>*Предоплата по брони 50% от стоимости, доплата за 3-4 
-                                дня до тура полной стоимости
-                                <img src="/images/Emoji/1f606.png" alt="smile" height="20px">
-                            </i>   
+                            <p>
+                                <i>
+                                    *Предоплата по брони 50% от стоимости, доплата за 3-4 
+                                    дня до тура полной стоимости
+                                    <img src="/images/Emoji/1f606.png" alt="smile" height="20px">
+                                </i>  
+                            </p>
                         </div>
                         <!--// Информируем -->
                         
