--- a/page-Svyatogorsk-and-Soledar.html
+++ b/page-Svyatogorsk-and-Soledar.html
@@ -426,8 +426,9 @@
 
                                         <hr>
                                         <p>
-                                            <i> *время указано предварительно и может меняться незначительно для улучшения
-                                                отдыха туристам!</i>
+                                            <i> *Время указано предварительно и может меняться незначительно для улучшения
+                                                отдыха туристам!
+                                            </i>
                                         </p>
                                     </div>
                                 </div>
