--- a/page-cheese-farm.html
+++ b/page-cheese-farm.html
@@ -243,7 +243,7 @@
                                         </button>
                                     </h5>
                                 </div>
-                                <div id="collapseOne" class="collapse" aria-labelledby="headingOne"
+                                <div id="collapseOne" class="collapse show" aria-labelledby="headingOne"
                                     data-parent="#accordionExample">
                                     <div class="card-body txt-alg-jf">
                                         <p><strong>10:00 </strong>
