--- a/page-Stambul.html
+++ b/page-Stambul.html
@@ -216,7 +216,7 @@
                                     </h5>
                                 </div>
 
-                                <div id="collapseOne" class="collapse" aria-labelledby="headingOne"
+                                <div id="collapseOne" class="collapse  show" aria-labelledby="headingOne"
                                     data-parent="#accordionExample">
                                     <div class="card-body txt-alg-jf">
                                         <h5>Стамбул разнообразен и притягателен</h5>
