--- a/page-gold-mines.html
+++ b/page-gold-mines.html
@@ -204,7 +204,7 @@
                                         </button>
                                     </h5>
                                 </div>
-                                <div id="collapseOne" class="collapse" aria-labelledby="headingOne"
+                                <div id="collapseOne" class="collapse show" aria-labelledby="headingOne"
                                     data-parent="#accordionExample">
                                     <div class="card-body txt-alg-jf">
 
