--- a/page-eight-march.html
+++ b/page-eight-march.html
@@ -183,7 +183,7 @@
                                     </h5>
                                 </div>
 
-                                <div id="collapseOne" class="collapse" aria-labelledby="headingOne"
+                                <div id="collapseOne" class="collapse show" aria-labelledby="headingOne"
                                     data-parent="#accordionExample">
                                     <div class="card-body txt-alg-jf">
                                         <p><strong>--</strong>
