--- a/page-LOL.html
+++ b/page-LOL.html
@@ -186,7 +186,7 @@
                                     </h5>
                                 </div>
 
-                                <div id="collapseOne" class="collapse" aria-labelledby="headingOne"
+                                <div id="collapseOne" class="collapse show" aria-labelledby="headingOne"
                                     data-parent="#accordionExample">
                                     <div class="card-body txt-alg-jf">
                                         <p><b>11:50</b> - сбор группы и после минутки позитива пешая прогулка до места
