--- a/packages.html
+++ b/packages.html
@@ -134,7 +134,7 @@
                         <p><span class="fa fa-tags"></span> <span>195грн.</span></p>
                     </div>
                     <div class="package-info">
-                        <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Запорожье, Украина.</h6>
+                        <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Запорожье</h6>
                         <h5 class="my-2">
                             <a href="https://novipovorot.pp.ua/page-Beer.html">
                                 Натуральное пиво
@@ -160,7 +160,7 @@
                         <p><span class="fa fa-tags"></span> <span>1650грн.</span></p>
                     </div>
                     <div class="package-info">
-                        <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Херсонская обл., Украина.</h6>
+                        <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Херсонская обл.</h6>
                         <h5 class="my-2">
                             <a href="https://novipovorot.pp.ua/page-Pink-Lake.html">
                                 Розовое озеро
@@ -185,7 +185,7 @@
                         <p><span class="fa fa-tags"></span> <span>350грн.</span></p>
                     </div>
                     <div class="package-info">
-                        <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Запорожье, Украина.</h6>
+                        <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Запорожье</h6>
                         <h5 class="my-2">
                             <a href="https://novipovorot.pp.ua/page-lions-and-horses.html">
                                 Львята и лошадки
@@ -211,7 +211,7 @@
                         <p><span class="fa fa-tags"></span> <span>850грн.</span></p>
                     </div>
                     <div class="package-info">
-                        <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Львов, Украина.</h6>
+                        <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Львов</h6>
                         <h5 class="my-2">
                             <a href="https://novipovorot.pp.ua/page-Lviv-for-weekend.html">
                                 Львов на выходные
@@ -257,7 +257,7 @@
                         <p><span class="fa fa-tags"></span> <span>4200грн.</span></p>
                     </div>
                     <div class="package-info">
-                        <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Украина.</h6>
+                        <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Карпаты</h6>
                         <h5 class="my-2">
                             <a href="https://novipovorot.pp.ua/page-yavorovskaya-niagara.html">
                                 Яворовская Ниагара
@@ -325,7 +325,7 @@
                         <p><span class="fa fa-tags"></span> <span>2400грн.</span></p>
                     </div>
                     <div class="package-info">
-                        <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Карпаты, Украина.</h6>
+                        <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Карпаты</h6>
                         <h5 class="my-2">
                             <a href="https://novipovorot.pp.ua/page-Karpati.html">
                                 Карпаты
@@ -349,7 +349,7 @@
                         <p><span class="fa fa-tags"></span> <span>95грн.</span></p>
                     </div>
                     <div class="package-info">
-                        <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Запорожье, Украина.</h6>
+                        <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Запорожье</h6>
                         <h5 class="my-2">
                             <a href="https://novipovorot.pp.ua/page-Hortica.html">
                                 Хортица
@@ -373,7 +373,7 @@
                         <p><span class="fa fa-tags"></span> <span>105грн.</span></p>
                     </div>
                     <div class="package-info">
-                        <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Запорожье, Украина</h6>
+                        <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Запорожье</h6>
                         <h5 class="my-2">
                             <a href="https://novipovorot.pp.ua/page-Zaporizhzhia-on-Dnieper.html">Запорожье на
                                 Днепре</a>
@@ -396,7 +396,7 @@
                         <p><span class="fa fa-tags"></span> <span>1100грн.</span></p>
                     </div>
                     <div class="package-info">
-                        <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Харьков, Украина</h6>
+                        <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Харьков</h6>
                         <h5 class="my-2">
                             <a href="https://novipovorot.pp.ua/page-Kharkov.html">Хлопковые Горы Харькова</a>
                         </h5>
@@ -440,7 +440,7 @@
                         <p><span class="fa fa-tags"></span> <span>250</span><span class="fa fa-eur"></span> </p>
                     </div>
                     <div class="package-info">
-                        <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Стамбул, Турция.</h6>
+                        <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Стамбул</h6>
                         <h5 class="my-2">
                             <a href="https://novipovorot.pp.ua/page-Stambul.html">
                                 Стамбул
@@ -466,7 +466,7 @@
                         <!--  <p><span class="fa fa-tags"></span> <span>195грн.</span></p> -->
                     </div>
                     <div class="package-info">
-                        <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Запорожье, Украина.</h6>
+                        <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Запорожье</h6>
                         <h5 class="my-2">
                             <a href="https://novipovorot.pp.ua/page-cofe-Isla.html">
                                 Кофе Isla
