--- a/packages-page-two.html
+++ b/packages-page-two.html
@@ -105,7 +105,7 @@
                      <!--   <p><span class="fa fa-tags"></span> <span>2600грн.</span></p>-->
                     </div>
                     <div class="package-info">
-                        <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span> Украина.</h6>
+                        <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Украина</h6>
                         <h5 class="my-2">
                             <a href="https://novipovorot.pp.ua/page-balloon-festival.html">
                                 Фестиваль Воздушных Шаров
@@ -131,7 +131,7 @@
 		    <!-- <p><span class="fa fa-tags"></span> <span>215грн.</span></p> -->
 		</div>
 		<div class="package-info">
-		    <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Запорожье, Украина.</h6>
+		    <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Запорожье</h6>
 		    <h5 class="my-2">
 			<a href="https://novipovorot.pp.ua/page-TicToc-pati.html">
 			    Tik Tok pati
@@ -157,7 +157,7 @@
 		<!--<p><span class="fa fa-tags"></span> <span>2700грн.</span></p>-->
 	    </div>
 	    <div class="package-info">
-		<h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Запорожье, Украина.</h6>
+		<h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Запорожье</h6>
 		<h5 class="my-2">
 		    <a href="https://novipovorot.pp.ua/page-gold-mines.html">
 			Золотые прииски Закарпатья
@@ -182,7 +182,7 @@
 		    <!--  <p><span class="fa fa-tags"></span> <span>195грн.</span></p> -->
 		</div>
 		<div class="package-info">
-		    <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Запорожье, Украина.</h6>
+		    <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Запорожье</h6>
 		    <h5 class="my-2">
 			<a href="https://novipovorot.pp.ua/page-eight-march.html">
 			    Букет к 8 марта
@@ -207,7 +207,7 @@
 		    <!-- <p><span class="fa fa-tags"></span> <span>2100грн.</span></p> -->
 		</div>
 		<div class="package-info">
-		    <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Одесса, Украина.</h6>
+		    <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Одесса</h6>
 		    <h5 class="my-2"><a href="https://novipovorot.pp.ua/page-Odessa-on-march.html">Одесса</a></h5>
 		    <p class="">Одесса на 8 марта, юмор и колорит. Морской привет!</p>
 		    <ul class="listing mt-3">
@@ -227,7 +227,7 @@
 		    <!-- <p><span class="fa fa-tags"></span> <span>180грн.</span></p>-->
 		</div>
 		<div class="package-info">
-		    <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Запорожье, Украина.</h6>
+		    <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Запорожье</h6>
 		    <h5 class="my-2">
 			<a href="https://novipovorot.pp.ua/page-LOL.html">
 			    Лол
@@ -251,7 +251,7 @@
 		    <!-- <p><span class="fa fa-tags"></span> <span>150грн.</span></p> -->
 		</div>
 		<div class="package-info">
-		    <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Запорожье, Украина.</h6>
+		    <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Запорожье</h6>
 		    <h5 class="my-2">
 			<a href="https://novipovorot.pp.ua/page-Limonariy.html">
 			    Лимонарий
