--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
                         <p><span class="fa fa-tags"></span> <span>195грн.</span></p>
                     </div>
                     <div class="package-info">
-                        <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Запорожье, Украина.</h6>
+                        <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Запорожье</h6>
                         <h5 class="my-2">
                             <a href="https://novipovorot.pp.ua/page-Beer.html">
                                 Натуральное пиво
@@ -349,7 +349,7 @@
                         <p><span class="fa fa-tags"></span> <span>1650грн.</span></p>
                     </div>
                     <div class="package-info">
-                        <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Херсонская обл., Украина.</h6>
+                        <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Херсонская обл.</h6>
                         <h5 class="my-2">
                             <a href="https://novipovorot.pp.ua/page-Pink-Lake.html">
                                 Розовое озеро
@@ -374,7 +374,7 @@
                         <p><span class="fa fa-tags"></span> <span>350грн.</span></p>
                     </div>
                     <div class="package-info">
-                        <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Запорожье, Украина.</h6>
+                        <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Запорожье</h6>
                         <h5 class="my-2">
                             <a href="https://novipovorot.pp.ua/page-lions-and-horses.html">
                                 Львята и лошадки
