--- a/packages.html
+++ b/packages.html
@@ -263,7 +263,7 @@
                                 Яворовская Ниагара
                             </a>
                         </h5>
-                        <p class="">Расписание на 2021 Год.</p>
+                        <p class="">Расписание экскурсии на 2021 Год.</p>
                         <ul class="listing mt-3">
                             <li><span class="fa fa-calendar mr-2"></span>Дата: <span>2021 Год</span></li>
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>4 Дня</span></li>
