--- a/packages-page-two.html
+++ b/packages-page-two.html
@@ -112,7 +112,7 @@
                             </a>
                         </h5>
                         <p class="">
-                            Умань, Каменец Подольский...
+                           Максимум от выходных...
                         </p>
                         <ul class="listing mt-3">
                             <li><span class="fa fa-calendar mr-2"></span>Дата: <span>Под Заказ</span></li>
@@ -157,13 +157,13 @@
 		<!--<p><span class="fa fa-tags"></span> <span>2700грн.</span></p>-->
 	    </div>
 	    <div class="package-info">
-		<h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Запорожье</h6>
+		<h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Закарпатье</h6>
 		<h5 class="my-2">
 		    <a href="https://novipovorot.pp.ua/page-gold-mines.html">
 			Золотые прииски Закарпатья
 		    </a>
 		</h5>
-		<p class="">Экскурсия в Закарпатье с Новым поворотом </p>
+		<p class="">Экскурсия в Закарпатье </p>
 		<ul class="listing mt-3">
 		    <li><span class="fa fa-calendar mr-2"></span>Дата: <span>Под Заказ</span></li>
 		    <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>3 Дня</span></li>
