--- a/page-Svyatogorsk-and-Soledar.html
+++ b/page-Svyatogorsk-and-Soledar.html
@@ -526,44 +526,31 @@
                                     транспорт туристического класса с раскладными сиденьями, ТВ;
                                 </li>
                                 <li class="list-group-item list-group-item-success ">
-                                    забираем с Металлургов-Фестивальная-Советская-Авто и Ж/Д вокзалы;
+                                    уникальная экскурсия со спуском в соляную шахту Соледара;  
                                 </li>
                                 <li class="list-group-item list-group-item-success ">
-                                    заберем Вас в Васильевке и по трассе с любого села по дороге на море;
+                                    интереснейшая экскурсия с дегустацией 5 видов вин на Артемовском заводе;
                                 </li>
                                 <li class="list-group-item list-group-item-success ">
-                                    входной билет на территорию Аскания Новая самого удивительного парка-заповедника!
+                                    1 ночь в гостинице 2-3 местные номера удобствами в номере(если вас 2 селим в 2хместный);
                                 </li>
                                 <li class="list-group-item list-group-item-success ">
-                                    офигенная экскурсия по Аскании - Нова!(Дендро и Зоопарк) 2.5-3 часа! ООООчень круто!
-                                    Все всегда в восторге!
+                                    входной билет с экскурсией Святогроский монастырь с посещением пещерных монастырей;
                                 </li>
                                 <li class="list-group-item list-group-item-success ">
-                                    1 НОЧЬ НА МОРЕ в гостинице на Арабатской стреле(поселение 2х и 3х местные номера,
-                                    моря 5 минут, рядом магазины и кафе);
-                                </li>
-                                <li class="list-group-item list-group-item-success ">
-                                    дегустация 2 видов вкуснейших вин на Розовом озере! Взрыв эмоций от красоты (группа
-                                    от 17 чел 3 вида вин);
-                                </li>
-                                <li class="list-group-item list-group-item-success ">
-                                    сопровождение представителя нашей компании;
-                                </li>
-                                <li class="list-group-item list-group-item-success ">
-                                    сувенир-магнит от Нового поворота,
-                                    СУПЕР КРУТОЙ ОТДЫХ, ПОЛНЫЙ РЕЛАКС И УДОВОЛЬСТВИЕ!
+                                    сопровождение представителя нашей компании, магнит от Нового поворота, самое замечательное настроение.
                                 </li>
                             </ul>
                         </div>
                         
                         <div class="alert alert-danger">
-                            <h5 class="alert-heading">В стоимость не входит:</h5>
+                            <h5 class="alert-heading">Дополнительно оплачивается:</h5>
                             <ul class="list-group list-group-flush">
                                 <li class="list-group-item list-group-item-danger ">
+                                    Входные билеты Святогорская лавра;
                                 </li>
                                 <li class="list-group-item list-group-item-danger ">
-                                </li>
-                                <li class="list-group-item list-group-item-danger ">
+                                    Питание.
                                 </li>
                             <ul>
                         </div>
