--- a/page-Svyatogorsk-and-Soledar.html
+++ b/page-Svyatogorsk-and-Soledar.html
@@ -560,29 +560,35 @@
                             Тексты подсказок:
                         </p>
                         <span class="badge rounded-pill bg-secondary"> <a
-                                onclick="selectText('AskaniaNova-RelaxationAtTheSea')" class="text-white"
-                                title="Аскания-Нова, релакс на море" href="#AskaniaNova-RelaxationAtTheSea"
-                                rel="tag">Аскания-Нова, релакс на море</a></span>
+                                onclick="selectText('Svyatogorsk')" class="text-white"
+                                title="Святогорск" href="#Svyatogorsk"
+                                rel="tag">Святогорск
+                                </a></span>
 
                         <span class="badge rounded-pill bg-secondary"> <a
-                                onclick="selectText('WineTastingOnThePinkLake')" class="text-white"
-                                title="Дегустация вин на розовом озере" href="#WineTastingOnThePinkLake">Дегустация вин
-                                на розовом
-                                озере</a></span>
+                                onclick="selectText('Soledar')" class="text-white"
+                                title="Соледар" href="#Soledar">Соледар
+                                </a></span>
 
                         <span class="badge rounded-pill bg-secondary"> <a onclick="selectText('logo')"
                                 class="text-white" title="Новый Поворот Запорожье" href="#logo" rel="tag">Новый Поворот
                                 Запорожье</a></span>
 
-                        <span class="badge rounded-pill bg-secondary"> <a onclick="selectText('DeliciousWines')"
-                                class="text-white" title="Вкуснейшие вина" href="#DeliciousWines" rel="tag">
-                                Вкуснейшие вина
+                        <span class="badge rounded-pill bg-secondary"> <a onclick="selectText('ChampagneAndSaltMines')"
+                                class="text-white" title="Шампанское и соляные шахты " href="#ChampagneAndSaltMines" rel="tag">
+                                Шампанское и соляные шахты 
                             </a></span>
 
-                        <span class="badge rounded-pill bg-secondary"> <a onclick="selectText('RareAnimalsOfAskania')"
-                                class="text-white" title="Редкие животные Аскании" href="#RareAnimalsOfAskania"
+                        <span class="badge rounded-pill bg-secondary"> <a onclick="selectText('ChampagneWineFactory')"
+                                class="text-white" title="Завод Шампанских вин" href="#ChampagneWineFactory"
                                 rel="tag">
-                                Редкие животные Аскании
+                                Завод Шампанских вин 
+                            </a></span>
+                                
+                        <span class="badge rounded-pill bg-secondary"> <a onclick="selectText('SaltSculptures')"
+                                class="text-white" title="Завод Шампанских вин" href="#SaltSculptures"
+                                rel="tag">
+                                Скульптурами из соли 
                             </a></span>
 
                     </div>
