--- a/page-Svyatogorsk-and-Soledar.html
+++ b/page-Svyatogorsk-and-Soledar.html
@@ -99,7 +99,11 @@
 
                 <div class="col-lg-8 col-xl-9 main-title-text">
                     <!-- Заголовок -->
-                    <h3 class="title"> Святогорск и Соледар</h3>
+                    <h3 class="title">
+                        <span id="Svyatogorsk"> Святогорск</span>
+                        и 
+                        <span id="Soledar">Соледар</span>
+                    </h3>
                     <!-- //Заголовок -->
                 </div>
                 <div class="col-lg-8 col-xl-9 blog-left-sub">
@@ -123,9 +127,11 @@
                         
                         <!--Подзаголовок-->
                         <h4 class="mb-3">
-                            Шампанское и соляные шахты - удивительный Святогорск.
-                            Вкуснейший завод Шампанских вин с дегустацией.
-                            Соляные шахты с поразительными скульптурами из соли. 
+                            <span id="ChampagneAndSaltMines">Шампанское и соляные шахты</span> - удивительный Святогорск.
+                            Вкуснейший 
+                            <span id="ChampagneWineFactory">завод Шампанских вин</span> с дегустацией.
+                            Соляные шахты с поразительными 
+                            <span id="SaltSculptures">скульптурами из соли</span>. 
                         </h4>
                         <!--//Подзаголовок-->
                         
