--- a/page-Svyatogorsk-and-Soledar.html
+++ b/page-Svyatogorsk-and-Soledar.html
@@ -556,7 +556,7 @@
                                     Входные билеты Святогорская лавра;
                                 </li>
                                 <li class="list-group-item list-group-item-danger ">
-                                    Питание.
+                                    питание.
                                 </li>
                             <ul>
                         </div>
