--- a/page-Svyatogorsk-and-Soledar.html
+++ b/page-Svyatogorsk-and-Soledar.html
@@ -7,6 +7,8 @@
     <meta charset="utf-8">
     <meta name="description" content="Туры выходного дня 'Новый поворот',  Святогорск и Соледар, Шампанское и соляные шахты - удивительный Святогорск, 
                                       Вкуснейший завод Шампанских вин с дегустацией, Соляные шахты с поразительными скульптурами из соли">
+    
+    <meta name="keywords" content="Святогорск, Соледар, Новый Поворот Запорожье, Шампанское и соляные шахты, Завод Шампанских вин, Скульптуры из соли" />
     <!-- Open Graph data-->
     <meta property="og:title" content=" Святогорск и Соледар">
     <meta property="og:description"
@@ -594,7 +596,7 @@
                         <span class="badge rounded-pill bg-secondary"> <a onclick="selectText('SaltSculptures')"
                                 class="text-white" title="Завод Шампанских вин" href="#SaltSculptures"
                                 rel="tag">
-                                Скульптурами из соли 
+                                Скульптуры из соли 
                             </a></span>
 
                     </div>
