--- a/page-lions-and-horses.html
+++ b/page-lions-and-horses.html
@@ -7,7 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
     <meta name="description" content="Туры выходного дня 'Новый поворот', Львята и Лошадки, Экскурсия Центр Пылышенко и Конный комплекс Кентавр">
-   
+	
+    <meta name="keywords" content="Запорожье, Экскурсия в Запорожье, Новый Поворот Запорожье, Путешествия, Туризм, Зоопарк Пылышенко, Конный комплекс, Лошади Запорожье,
+				   Львята Запорожье" />
     <!-- Open Graph data-->
     <meta property="og:title" content="Львята и Лошадки">
     <meta property="og:description" content="Экскурсия Центр Пылышенко и Конный комплекс Кентавр."/>
