--- a/page-Beer.html
+++ b/page-Beer.html
@@ -8,6 +8,8 @@
     <meta charset="utf-8">
     <meta name="description" content="Туры выходного дня 'Новый поворот', дегустация пива, пивная экскурсия, частная пивоварня, натуральное пиво, дух хмеля">
     <meta name="keywords" content="Tуры выходного дня 'Новый поворот', Экскурсия и дегустация в частную пивоварню, Пиво_Запороже, мероприятия_Запорожья, афиша_Запорожье, экскурсии_Запорожье " />
+    
+    <meta name="keywords" content="Дегустация пива, Пивная экскурсия, Частная пивоварня, Натуральное пиво, Дух хмеля" />
     <!-- Open Graph data-->
     <meta property="og:title" content="Пиво">
     <meta property="og:description" content="Экскурсия и дегустация в частную пивоварню!"/>
