--- a/page-Pink-Lake.html
+++ b/page-Pink-Lake.html
@@ -6,6 +6,8 @@
     <meta charset="utf-8">
     <meta name="description" content="Туры выходного дня 'Новый поворот', Аскания-Нова ">
 
+    <meta name="keywords" content="Аскания-Нова, релакс на море, Дегустация вин на розовом озере, 
+                                   Новый Поворот Запорожье, Вкуснейшие вина, Редкие животные Аскании" />
     <!-- Open Graph data-->
     <meta property="og:title" content="Розовое Озеро">
     <meta property="og:description"
