--- a/page-Lviv-for-weekend.html
+++ b/page-Lviv-for-weekend.html
@@ -8,6 +8,8 @@
     <meta charset="utf-8">
     <meta name="description" content="Туры выходного дня 'Новый поворот', Львов на выходные с местными гидами. ">
    
+    <meta name="keywords" content="Запорожье, Новый Поворот Запорожье, Путешествия, Туризм, Львов, Западная Украина из Запорожья,
+                                   Изюминки Старого города, Иезуитский костел, Австрийский Львов" />
     <!-- Open Graph data-->
     <meta property="og:title" content="Львов на выходные">
     <meta property="og:description" content="Львов на выходные"/>
