--- a/page-wine.html
+++ b/page-wine.html
@@ -8,6 +8,7 @@
     <meta charset="utf-8">
     <meta name="description" content="Туры выходного дня 'Новый поворот', Натуральное вино, Экскурсия на винный завод, Дегустация вина и улиток, Вина Запорожья, Винный завод Запорожья ">
   
+    <meta name="keywords" content="Натуральное вино, Экскурсия на винный завод, Дегустация вина и улиток, Вина Запорожья, Винный завод Запорожья" />
     <!-- Open Graph data-->
     <meta property="og:title" content="Вино">
     <meta property="og:description" content="Экскурсия на винный завод"/>
