--- a/page-yavorovskaya-niagara.html
+++ b/page-yavorovskaya-niagara.html
@@ -8,6 +8,8 @@
     <meta charset="utf-8">
     <meta name="description" content="Туры выходного дня 'Новый поворот', Яворовская Ниагара. Буковель и форелевое хозяйство. ">
    
+    <meta name="keywords" content="Запорожье, Новый Поворот Запорожье, Путешествия, Туризм, Яворовская Ниагара, Буковель и форелевое хозяйство,
+                                   Яремче и купание в Серебрянных водопадах, Сбор грибов и ягод в горных долинах, Дегустации гуцульских блюд" />
     <!-- Open Graph data-->
     <meta property="og:title" content="Яворовская Ниагара. Буковель и форелевое хозяйство.">
     <meta property="og:description" content="Яворовская Ниагара. Буковель и форелевое хозяйство. Яремче и купание в Серебрянных водопадах. Сбор грибов и ягод в горных долинах. Дегустации гуцульских блюд."/>
