--- a/page-Georgia.html
+++ b/page-Georgia.html
@@ -7,6 +7,7 @@
     <meta charset="utf-8">
     <meta name="description" content="Туры выходного дня 'Новый поворот', Расписание походов, Грузия Новый Поворот Грузия, Походы по Грузии, Тушетия и Хевсуретия, Сванетия и Колхида ">
     
+    <meta name="keywords" content="Расписание походов Грузия, Новый Поворот Грузия, Походы по Грузии, Тушетия и Хевсуретия, Сванетия и Колхида" />
     <!-- Open Graph data-->
     <meta property="og:title" content="Походы по Грузии">
     <meta property="og:description" content="Расписание походов..."/>
