--- a/page-Hortica.html
+++ b/page-Hortica.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
     <meta name="description" content="Туры выходного дня 'Новый поворот', Остров Запорожья, Тайны Хортицы, Экскурсия по Хортице, Захоронение Колдуна, Древние святилища">
-   <!-- <meta name="keywords" content="Tуры выходного дня 'Новый поворот', Тайны и загадки острова, Хортица Запороже, мероприятия Запорожья, афиша Запорожье, экскурсии Запорожье " />-->
+    <meta name="keywords" content="Остров Запорожья, Тайны Хортицы, Экскурсия по Хортице, Захоронение Колдуна, Древние святилища " /> 
     
     <!-- Open Graph data-->
     <meta property="og:title" content="Хортица">
