--- a/page-Zaporizhzhia-on-Dnieper.html
+++ b/page-Zaporizhzhia-on-Dnieper.html
@@ -9,6 +9,7 @@
     <meta name="description" content="Туры выходного дня 'Новый поворот', Запорожье, Экскурсия в Запорожье, Новый Поворот Запорожье, Запорожье на Днепре, 
         Экскурсия с 'огоньком', Прогулка с изюминкой">
 
+    <meta name="keywords" content="Запорожье, Экскурсия в Запорожье, Новый Поворот Запорожье, Запорожье на Днепре, Экскурсия с 'огоньком', Прогулка с изюминкой" />
     <!-- Open Graph data-->
     <meta property="og:title" content=" Экскурсия в Запорожье на Днепре, прогулка с изюминкой">
     <meta property="og:description" content=" Экскурсия в Запорожье на Днепре, прогулка с изюминкой " />
