--- a/page-Kharkov.html
+++ b/page-Kharkov.html
@@ -9,6 +9,8 @@
     <meta name="description" content="Хлопковые горы Харькова, Белоснежные горы Харькова, Печенежское водохранилище, Экскурсия в Харьков, Новый Поворот, Меловые горы, Харьков из Запорожья, Кицевская пустыня,
                                       Голубая гладь, Бескрайняя пустыня">
 
+    <meta name="keywords" content="Белоснежные горы Харькова, Печенежское водохранилище, Экскурсия в Харьков, Новый Поворот, Меловые горы, Харьков из Запорожья,
+                                   Кицевская пустыня, Голубая гладь, Бескрайняя пустыня, Хлопковые горы Харькова" />
     <!-- Open Graph data-->
     <meta property="og:title" content="Хлопковые горы Харькова">
     <meta property="og:description" content="Самые крутые пейзажи! |  Кицевская пустыня | Печенежское водохранилище | Голубая гладь " />
