--- a/page-zoo.html
+++ b/page-zoo.html
@@ -8,6 +8,7 @@
     <meta charset="utf-8">
     <meta name="description" content="Туры выходного дня 'Новый поворот', Зоопарк Пылышенко  | Замок Попова | Панское озеро, Экскурсии Запорожье | Экскурсии выходного дня | Мастер классы ">
    
+    <meta name="keywords" content="Зоопарк Пылышенко, Мистический Замок, Замок Попова, Панское озеро, Волшебный родник" />
     <!-- Open Graph data-->
     <meta property="og:title" content="Зоопарк Пылышенко  | Замок Попова | Панское озеро">
     <meta property="og:description" content="Зоопарк Пылышенко  | Замок Попова | Панское озеро"/>
