--- a/page-Stambul.html
+++ b/page-Stambul.html
@@ -9,6 +9,7 @@
     <meta name="description"
         content="Туры выходного дня 'Новый поворот', Прогулка по Золотому Рогу, Оазис тишины, Между Европой и Азией, Центр Стамбула, Улица антикварных лавок ">
 
+    <meta name="keywords" content="Прогулка по Золотому Рогу, Оазис тишины, Между Европой и Азией, Центр Стамбула, Улица антикварных лавок" />
     <!-- Open Graph data-->
     <meta property="og:title" content="Стамбул - столица тюльпанов!">
     <meta property="og:description"
