--- a/page-balloon-festival.html
+++ b/page-balloon-festival.html
@@ -7,7 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
     <meta name="description" content="Туры выходного дня 'Новый поворот', Фестиваль Воздушных Шаров ">
-   
+    <meta name="keywords" content="Запорожье, Новый Поворот Запорожье, Путешествия, Туризм, Запорожье-Каменец, 
+                                   Фестиваль воздушных шаров из Запорожье, Бакота из Запорожья, Новая Софиевка, Умань, Замок в Каменец Подольском" />
     <!-- Open Graph data-->
     <meta property="og:title" content="Фестиваль Воздушных Шаров">
     <meta property="og:description" content="Фестиваль Воздушных Шаров"/>
