--- a/page-gold-mines.html
+++ b/page-gold-mines.html
@@ -8,6 +8,9 @@
     <meta charset="utf-8">
     <meta name="description" content="Туры выходного дня 'Новый поворот', Золотые прииски Закарпатья ">
 
+    <meta name="keywords" content=" Запорожье, Новый Поворот Запорожье, Путешествия, Туризм, Западная Украина из Запорожья,
+    Озео Синевир, Цветущая Долина Нарциссов, Цветы Ледникового периода, Дворец графов Шенборнов" />
+    
     <!-- Open Graph data-->
     <meta property="og:title" content="Золотые прииски Закарпатья">
     <meta property="og:description" content="Золотые прииски Закарпатья" />
